Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -119,7 +119,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "email=\"art.vandelay@vandelay.com\"\n"
+    "email=\"art.vandelay@vandelay.com\"\n",
+    "email"
    ]
   },
   {
