Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -115,9 +115,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'art.vandelay@vandelay.com'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "email=\"art.vandelay@vandelay.com\"\n",
     "email"
