--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -206,23 +206,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Art Vandelay'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "name = 'Art Vandelay'\n",
-    "name "
+    "name = 'Art Vandelay'"
    ]
   },
   {
